Add the ability to exclude tags